Add rough data-shaping

--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,8 @@ cython_debug/
 
 # FE static
 node_modules
+
+
+# Data Shaping data
+**/data-shaping/data/new_model/*.xlsx
+**/data-shaping/data/old_model/*.xlsx
