--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.defaultInterpreterPath":"data-shaping/.venv/bin/python"
+    "python.defaultInterpreterPath": "data-shaping/.venv/bin/python",
+    "cSpell.words": [
+        "dataframes"
+    ]
 }
