--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "cwd": "${workspaceFolder}/data-shaping"
+            "cwd": "${workspaceFolder}/data-shaping",
+            "args": ["--ignore-errors"]
         }
     ]
 }
