--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,8 @@ node_modules
 # Data Shaping data
 **/data-shaping/data/new_model/*.xlsx
 **/data-shaping/data/old_model/*.xlsx
+# ignore lockfiles
+**/data-shaping/data/old_model/*lock* 
+
+
+**/.vscode/settings.json
