--- a/data-shaping/requirements.txt
+++ b/data-shaping/requirements.txt
@@ -1,8 +1,20 @@
+annotated-types==0.6.0
 et-xmlfile==1.1.0
+multimethod==1.10
+mypy-extensions==1.0.0
 numpy==1.24.3
 openpyxl==3.1.2
+packaging==23.2
 pandas==2.0.2
+pandera==0.18.0
+pydantic==2.5.2
+pydantic_core==2.14.5
 python-dateutil==2.8.2
 pytz==2023.3
 six==1.16.0
+typeguard==4.1.5
+typing-inspect==0.9.0
+typing_extensions==4.9.0
 tzdata==2023.3
+wrapt==1.16.0
+XlsxWriter==3.1.2
